[gd_scene load_steps=44 format=3 uid="uid://rw8y3keu1b2i"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_ncqe7"]
[ext_resource type="Texture2D" uid="uid://crkdiyxx2khl0" path="res://assets/Actor/Characters/Knight/SpriteSheet.png" id="1_qxfs4"]
[ext_resource type="Script" path="res://scripts/animation_controller.gd" id="3_2l827"]
[ext_resource type="Shape2D" uid="uid://ba0jkrn22c6jf" path="res://resources/player/player_collision_shape.tres" id="4_ogu7s"]
[ext_resource type="PackedScene" uid="uid://dat8ni22r6ob3" path="res://resources/UI/inventory_ui.tscn" id="5_0d4te"]
[ext_resource type="Script" path="res://scripts/inventory.gd" id="6_7c11i"]
[ext_resource type="PackedScene" uid="uid://mqcaccn11ief" path="res://resources/UI/on_screen_ui.tscn" id="7_r5k04"]
[ext_resource type="PackedScene" uid="uid://cg81e08g227tf" path="res://resources/combat_system/combat_system.tscn" id="8_6qhnn"]
[ext_resource type="Script" path="res://resources/player/jutsu_system.gd" id="9_eglbx"]
[ext_resource type="PackedScene" uid="uid://b5e3dgothl2hh" path="res://scenes/HealthSystem.tscn" id="10_wymv7"]
[ext_resource type="PackedScene" uid="uid://dleumm4tcc3im" path="res://scenes/stamina_system.tscn" id="11_4th3k"]
[ext_resource type="Texture2D" uid="uid://kr1gpjcu7ofy" path="res://assets/Actor/Characters/Shadow.png" id="12_754h3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_iabce"]
atlas = ExtResource("1_qxfs4")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lkhs"]
atlas = ExtResource("1_qxfs4")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kbvs"]
atlas = ExtResource("1_qxfs4")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sr3ws"]
atlas = ExtResource("1_qxfs4")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_24rk8"]
atlas = ExtResource("1_qxfs4")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vcr2"]
atlas = ExtResource("1_qxfs4")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kx3d"]
atlas = ExtResource("1_qxfs4")
region = Rect2(0, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aep6v"]
atlas = ExtResource("1_qxfs4")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b17qr"]
atlas = ExtResource("1_qxfs4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xj8o"]
atlas = ExtResource("1_qxfs4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhwdp"]
atlas = ExtResource("1_qxfs4")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdw7q"]
atlas = ExtResource("1_qxfs4")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_atys3"]
atlas = ExtResource("1_qxfs4")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukyn8"]
atlas = ExtResource("1_qxfs4")
region = Rect2(16, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0h5yi"]
atlas = ExtResource("1_qxfs4")
region = Rect2(32, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_smwhh"]
atlas = ExtResource("1_qxfs4")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjag6"]
atlas = ExtResource("1_qxfs4")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yl77t"]
atlas = ExtResource("1_qxfs4")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilkoi"]
atlas = ExtResource("1_qxfs4")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfv4e"]
atlas = ExtResource("1_qxfs4")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6hh0"]
atlas = ExtResource("1_qxfs4")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwe01"]
atlas = ExtResource("1_qxfs4")
region = Rect2(48, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_22a4v"]
atlas = ExtResource("1_qxfs4")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyo7p"]
atlas = ExtResource("1_qxfs4")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wiwlq"]
atlas = ExtResource("1_qxfs4")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufka4"]
atlas = ExtResource("1_qxfs4")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_soghr"]
atlas = ExtResource("1_qxfs4")
region = Rect2(48, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_6txn0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iabce")
}],
"loop": false,
"name": &"back_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lkhs")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kbvs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sr3ws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24rk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vcr2")
}],
"loop": true,
"name": &"back_walk",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kx3d")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aep6v")
}],
"loop": false,
"name": &"front_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b17qr")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xj8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhwdp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdw7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_atys3")
}],
"loop": true,
"name": &"front_walk",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukyn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0h5yi")
}],
"loop": false,
"name": &"hit",
"speed": 0.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_smwhh")
}],
"loop": false,
"name": &"left_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjag6")
}],
"loop": true,
"name": &"left_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yl77t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilkoi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfv4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6hh0")
}],
"loop": true,
"name": &"left_walk",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwe01")
}],
"loop": false,
"name": &"right_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_22a4v")
}],
"loop": true,
"name": &"right_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyo7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wiwlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufka4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_soghr")
}],
"loop": true,
"name": &"right_walk",
"speed": 6.0
}]

[sub_resource type="Animation" id="Animation_cxkc8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ggmqh"]
resource_name = "hit_flash"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.790969, 4.28364e-06, 8.66354e-07, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ydl22"]
_data = {
"RESET": SubResource("Animation_cxkc8"),
"hit_flash": SubResource("Animation_ggmqh")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 1
y_sort_enabled = true
position = Vector2(0, 1)
collision_mask = 326
script = ExtResource("1_ncqe7")
knockback_power = 60

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -9)
sprite_frames = SubResource("SpriteFrames_6txn0")
animation = &"back_walk"
autoplay = "front_idle"
script = ExtResource("3_2l827")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Player"]]
position = Vector2(0, -8)
shape = ExtResource("4_ogu7s")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
process_callback = 0
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.0
drag_top_margin = 0.0
drag_right_margin = 0.0
drag_bottom_margin = 0.0

[node name="Area2D" type="Area2D" parent="." groups=["Player"]]
position = Vector2(0, -9)
collision_mask = 40

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" groups=["Player"]]
position = Vector2(0, 1)
shape = ExtResource("4_ogu7s")

[node name="InventoryToggler" type="Node" parent="." groups=["Player"]]
script = ExtResource("6_7c11i")

[node name="OnScreenUi" parent="." instance=ExtResource("7_r5k04")]

[node name="InventoryUi" parent="." instance=ExtResource("5_0d4te")]
visible = false

[node name="CombatSystem" parent="." instance=ExtResource("8_6qhnn")]

[node name="JutsuSystem" type="Node" parent="."]
script = ExtResource("9_eglbx")

[node name="HealthSystem" parent="." node_paths=PackedStringArray("actor") instance=ExtResource("10_wymv7")]
actor = NodePath("..")

[node name="StaminaSystem" parent="." instance=ExtResource("11_4th3k")]

[node name="PlayerAudio" type="AudioStreamPlayer2D" parent="."]
bus = &"SFX"

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[node name="HitAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ydl22")
}

[node name="ShadowSprite" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.439216)
show_behind_parent = true
z_index = -1
position = Vector2(0, -2)
texture = ExtResource("12_754h3")

[connection signal="animation_finished" from="AnimatedSprite2D" to="AnimatedSprite2D" method="_on_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
